--- a/Visualizations/comparisons.html
+++ b/Visualizations/comparisons.html
@@ -58,7 +58,7 @@
 
 		<!-- End of Nav Bar -->
 
-		<!-- Start of Cantainer -->
+		<!-- Start of Container -->
 
 		<div class="container">
 			<section class="row">
@@ -81,12 +81,12 @@
 									<img src="../Assets/images/Fig2.png" lat="Latitude vs. Max Humidity", title="Latitude vs. Max Humidity" class="imageNav-photo">
 								</a>
 							</div>
-							<div class="col-lg-6" style="padding: 20px:">
+							<div class="col-lg-6" style="padding: 20px; margin-top: 20px;">
 									<div class="imageNav-header">vs. Max Cloudiness</div>
 							<a href="cloudiness.html">
 									<img src="../Assets/images/Fig3.png" lat="Latitude vs. Max Cloudiness", title="Latitude vs. Max Cloudiness" class="imageNav-photo">
 								</a>
-							</div><div class="col-lg-6" style="padding: 20px:">
+							</div><div class="col-lg-6" style="padding: 20px; margin-top: 20px">
 									<div class="imageNav-header">vs. Max Wind Speed</div>
 							<a href="wind.html">
 									<img src="../Assets/images/Fig4.png" lat="Latitude vs. Max Wind Speed", title="Latitude vs. Wind Speed" class="imageNav-photo">
