--- a/Visualizations/comparisons.html
+++ b/Visualizations/comparisons.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<title>Climate Analysis Dashboard</title>
+		<title>Climate Analysis</title>
 
 			<!-- Bootstrap CSS -->
 
@@ -39,7 +39,7 @@
 						<li class="nav-item dropdown">
 							<a href="#" class ="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="temperature.html">Max Temperature</a>
+								<a class="dropdown-item"  href="temperature.html">Max Temperature</a>
 								<a class="dropdown-item" href="humidity.html">Humidity</a>
 								<a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
 								<a class="dropdown-item" href="wind.html">Wind Speed</a>
@@ -67,10 +67,10 @@
 						<h1 class="description-header">Comparison: Latitude vs X</h1>
 						<hr>
 								<p>Select plot for an in-depth analysis.</p>
-						<div class="container" style="padding-bottom: 40px;">
+						<div class="container" style="padding-bottom: 20px;">
 							<div class="row">
 								<div class="col-lg-6" style="padding: 20px:">
-									<div class="imageNav-header">vs. Max Temperature</div>
+									<div class="imageNav-header" >vs. Max Temperature</div>
 							<a href="temperature.html">
 									<img src="../Assets/images/Fig1.png" lat="Latitude vs. Max Temperature", title="Latitude vs. Max Temperature" class="imageNav-photo">
 								</a>
@@ -109,7 +109,7 @@
 	<!-- Start of Footer -->
 
 	<footer>
-		<div class="footer">&copy Copyright mkstewart 2022</div>
+			<div class="footer">Mary Stewart - Web Design Challenge - 2022</div>
 	</footer>
 
 	<!-- End of footer -->
