--- a/Visualizations/data.html
+++ b/Visualizations/data.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<title>Climate Analysis Dashboard</title>
+		<title>Climate Analysis</title>
 
 			<!-- Bootstrap CSS -->
 
@@ -69,7 +69,8 @@
 						<p> The following data was used to research and complete this project</p>
 						<br>
 						<div>
-							<table border="1" class="dataframe">
+							<table class="table table-info table-striped" border="black" class="table-responsive" >
+
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -7210,7 +7211,7 @@
   <!-- Start of Footer -->
 
   <footer>
-  	<div class="footer">&copy; Copyright mkstewart 2022</div>
+      <div class="footer">Mary Stewart - Web Design Challenge - 2022</div>
   </footer>
 
   <!-- Query, Popper and Bootstrap Bundle -->
