--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<title>Climate Analysis Dashboard</title>
+		<title>Climate Analysis</title>
 
 			<!-- Bootstrap CSS -->
 
@@ -118,7 +118,7 @@
 		<!-- Start of Footer -->
 
 		<footer>
-			<div class="footer">&copy; Copyright mkstewart 2022</div>
+			<div class="footer">Mary Stewart - Web Design Challenge - 2022</div>
 		</footer>
 
 		<!-- End of Footer -->
