--- a/Visualizations/comparisons.html
+++ b/Visualizations/comparisons.html
@@ -19,42 +19,42 @@
 
 			<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
-		</head>
+	</head>
 
 		<body>
 
-			<!-- Start of Navbar -->
+		<!-- Start of Navbar -->
 
-				<div class="navigation">
-					<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+		<div class="navigation">
+			<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 				<a class="navbar-brand" href="../index.html">Latitude</a>
-				<button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+					<button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 
-				<!-- Collect navigation links, forms and content for toggling -->
+					<!-- Collect navigation links, forms and content for toggling -->
 
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item dropdown">
-							<a href="#" class ="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<div class="collapse navbar-collapse" id="navbarNavDropdown">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item dropdown">
+								<a href="#" class ="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 								<a class="dropdown-item"  href="temperature.html">Max Temperature</a>
 								<a class="dropdown-item" href="humidity.html">Humidity</a>
 								<a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
 								<a class="dropdown-item" href="wind.html">Wind Speed</a>
-							</div>
+									</div>
+							</li>
+						<li class="nav-item">
+								<a class="nav-link" href="comparisons.html">Comparison</a>
 						</li>
-						<li class="nav-item">
-									<a class="nav-link" href="comparisons.html">Comparison</a>
-								</li>
-						<li class="nav-item">
-									<a class="nav-link"	href="data.html">Data</a>
-								</li>
-					</ul>
-				</div>
+							<li class="nav-item">
+								<a class="nav-link"	href="data.html">Data</a>
+							</li>
+						</ul>
+					</div>
 			</nav>
-				</div>
+		</div>
 
 		<!-- End of Nav Bar -->
 
@@ -65,59 +65,56 @@
 				<div>
 					<div class="description-content">
 						<h1 class="description-header">Comparison: Latitude vs X</h1>
-						<hr>
+							<hr>
 								<p>Select plot for an in-depth analysis.</p>
-						<div class="container" style="padding-bottom: 20px;">
-							<div class="row">
-								<div class="col-lg-6" style="padding: 20px:">
+									<div class="container" style="padding-bottom: 20px;">
+									<div class="row">
+									<div class="col-lg-6" style="padding: 20px:">
 									<div class="imageNav-header" >vs. Max Temperature</div>
-							<a href="temperature.html">
-									<img src="../Assets/images/Fig1.png" lat="Latitude vs. Max Temperature", title="Latitude vs. Max Temperature" class="imageNav-photo">
-								</a>
-							</div>
-							<div class="col-lg-6" style="padding: 20px:">
-									<div class="imageNav-header">vs. Max Humidity</div>
-							<a href="humidity.html">
-									<img src="../Assets/images/Fig2.png" lat="Latitude vs. Max Humidity", title="Latitude vs. Max Humidity" class="imageNav-photo">
-								</a>
-							</div>
-							<div class="col-lg-6" style="padding: 20px; margin-top: 20px;">
-									<div class="imageNav-header">vs. Max Cloudiness</div>
-							<a href="cloudiness.html">
-									<img src="../Assets/images/Fig3.png" lat="Latitude vs. Max Cloudiness", title="Latitude vs. Max Cloudiness" class="imageNav-photo">
-								</a>
-							</div><div class="col-lg-6" style="padding: 20px; margin-top: 20px">
+										<a href="temperature.html">
+											<img src="../Assets/images/Fig1.png" lat="Latitude vs. Max Temperature", title="Latitude vs. Max Temperature" class="imageNav-photo">
+										</a>
+									</div>
+										<div class="col-lg-6" style="padding: 20px:">
+										<div class="imageNav-header">vs. Max Humidity</div>
+										<a href="humidity.html">
+											<img src="../Assets/images/Fig2.png" lat="Latitude vs. Max Humidity", title="Latitude vs. Max Humidity" class="imageNav-photo">
+										</a>
+									</div>
+										<div class="col-lg-6" style="padding: 20px; margin-top: 20px;">
+										<div class="imageNav-header">vs. Max Cloudiness</div>
+										<a href="cloudiness.html">
+											<img src="../Assets/images/Fig3.png" lat="Latitude vs. Max Cloudiness", title="Latitude vs. Max Cloudiness" class="imageNav-photo">
+										</a>
+										</div>
+									<div class="col-lg-6" style="padding: 20px; margin-top: 20px">
 									<div class="imageNav-header">vs. Max Wind Speed</div>
-							<a href="wind.html">
-									<img src="../Assets/images/Fig4.png" lat="Latitude vs. Max Wind Speed", title="Latitude vs. Wind Speed" class="imageNav-photo">
-								</a>
+										<a href="wind.html">
+											<img src="../Assets/images/Fig4.png" lat="Latitude vs. Max Wind Speed", title="Latitude vs. Wind Speed" class="imageNav-photo">
+										</a>
 
-							</div>
+									</div>
+									</div>
+									</div>
 					</div>
-						
-						</div>
 				</div>
+			</section>
+		</div>
 
-			</div>
+		<!-- End of Container -->
 
-		</section>
+		<!-- Start of Footer -->
 
-	</div>
-
-	<!-- End of Container -->
-
-	<!-- Start of Footer -->
-
-	<footer>
+		<footer>
 			<div class="footer">Mary Stewart - Web Design Challenge - 2022</div>
-	</footer>
+		</footer>
 
-	<!-- End of footer -->
+		<!-- End of footer -->
 
-	<!-- Query, Popper and Bootstrap Bundle -->
+		<!-- Query, Popper and Bootstrap Bundle -->
 
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   	</body>
 </html>
